# network_graph

./: Cargo.toml  README.md
egui_node_graph/: Cargo.toml
egui_node_graph/examples/vector_scalar_math/: app.rs  main.rs
egui_node_graph/src/: color_hex_utils.rs  editor_ui.rs  error.rs  graph.rs  graph_impls.rs  id_type.rs  index_impls.rs  node_finder.rs  traits.rs  ui_state.rs  utils.rs
netgraph/: Cargo.toml
netgraph/src/: app.rs  main.rs
netgraph/src/app/: nf_graph.rs  plugin.rs
netgraph/src/app/nf_graph/: data_type.rs  graph_state.rs  node_data.rs  node_template.rs  node_template_iter.rs  response.rs  value_type.rs
