[package]
name = "egui_node_graph"
description = "A helper library to create interactive node graphs using egui"
homepage = "https://github.com/setzer22/egui_node_graph"
repository = "https://github.com/setzer22/egui_node_graph"
license = "MIT"
version = "0.4.0"
keywords = ["ui", "egui", "graph", "node"]
authors = ["setzer22"]
edition = "2021"

[features]
persistence = ["slotmap/serde", "smallvec/serde", "eframe/persistence"]

[dependencies]
eframe = { workspace = true }
slotmap = { version = "1.0" }
smallvec = { version = "1.11.2" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
